# streaming-benchmarks

./: .packcheck.ignore  .travis.yml  Benchmarks.hs  Changelog.md  Charts.hs  LICENSE  README.md  README.rst  appveyor.yml  bench.sh  cabal.project  cabal.project.Werror  default.nix  run.sh  stack-8.0.yaml  stack-8.2.yaml  stack-pedantic.yaml  stack.yaml  streaming-benchmarks.cabal
.github/workflows/: build.yml
Benchmarks/: BenchTH.hs  BenchmarkTH.hs  ByteString.hs  ByteStringLazy.hs  Common.hs  Conduit.hs  DList.hs  Drinkery.hs  List.hs  ListT.hs  ListTransformer.hs  LogicT.hs  Machines.hs  Pipes.hs  Sequence.hs  SimpleConduit.hs  Streaming.hs  Streamly.hs  StreamlyArray.hs  StreamlyPure.hs  Text.hs  Vector.hs  VectorCommon.hs  VectorMonadic.hs  VectorPure.hs  VectorStorable.hs  VectorStreams.hs  VectorUnboxed.hs
bench-report/: README.md  bench-report.nix
bench-runner/: Main.hs  bench-runner.cabal
charts-0/: results.csv  streamly-vs-list.csv  streamly-vs-list.txt  streamly-vs-streams.csv  streamly-vs-streams.txt
charts-1/: results.csv
charts-2/: results.csv
docs/: benchmarking-notes.md
lib/Benchmarks/: BenchTH.hs  BenchmarkTH.hs  Common.hs  DefaultMain.hs
licenses/: Readme.txt
list-benchmarks-indef/: List.hsig  ListBenchmark.hs
list-prelude/: ListPrelude.hs
list-sequence/: ListSequence.hs
list-streamly/: ListStreamly.hs
list-vector/: ListVector.hs
stream-streaming/: StrStreaming.hs
stream-streamly/: StrStreamly.hs
stream-vector/: StrVector.hs  Vector.hs
streaming-benchmarks-indef/: Stream.hsig  StreamBenchmark.hs
