name:          streaming-benchmarks
category:      Benchmark
version:       0.2.0
license:       MIT
license-file:  LICENSE
author:        Harendra Kumar
maintainer:    Harendra Kumar
stability:     provisional
homepage:      http://github.com/composewell/streaming-benchmarks
bug-reports:   http://github.com/composewell/streaming-benchmarks/issues
copyright:     Copyright (c) 2017 Harendra Kumar
synopsis:      Benchmarks to compare streaming packages
description:
  Benchmarks along with with pretty comparative graph generation for streaming
  operations and their comparisons across notable Haskell streaming libraries
  including `streamly`, `streaming`, `pipes`, and `conduit`.
  <http://hackage.haskell.org/package/streamly streamly> is a high performance
  streaming library with native support for high level, declarative and
  composable concurrency, it is the primary motivation for these benchmarks.
  .
  Use the @./bench.sh@ script to run the benchmarks; use @--stack@ option to
  use the @stack@ tool for building instead of @cabal@.  Graphs are generated
  in the `charts` directory. Use @./bench.sh --help@ for all script options.
  .
  See the README file shipped with the package or
  <https://github.com/composewell/streaming-benchmarks in the github repo>
  for more details. The github repo also shows the latest comparative graphs.

cabal-version: >= 1.10
tested-with: GHC==8.2.2, GHC==8.4.4, GHC==8.6.5
build-type:    Simple
extra-source-files:
  Changelog.md
  bench.sh
  cabal.project
  README.md
  licenses/Readme.txt
  licenses/LICENSE.machines
  stack.yaml

source-repository head
  type: git
  location: git://github.com/composewell/streaming-benchmarks.git

flag dev
  description: Development build
  manual: True
  default: False

benchmark bmarks
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   .
  main-is:          Benchmarks.hs
  other-modules:    Benchmarks.Common
                  , Benchmarks.BenchTH
                  , Benchmarks.BenchmarkTH

                  -- Pure streams
                  , Benchmarks.List
                  , Benchmarks.DList
                  , Benchmarks.Sequence
                  , Benchmarks.Vector
                  , Benchmarks.StreamlyPure
                  , Benchmarks.StreamlyArray
                  , Benchmarks.ByteString
                  , Benchmarks.ByteStringLazy
                  , Benchmarks.Text

                  -- Monadic streams
                  , Benchmarks.Streamly
                  , Benchmarks.VectorMonadic
                  , Benchmarks.Streaming
                  , Benchmarks.Conduit
                  , Benchmarks.Pipes
                  , Benchmarks.Machines
                  , Benchmarks.Drinkery

                -- List transformers
                -- , Benchmarks.LogicT
                -- , Benchmarks.ListT
                -- , Benchmarks.ListTransformer

  ghc-options: -O2 -Wall -with-rtsopts "-T" -fspec-constr-recursive=10
  if impl(ghc >= 8.0)
    ghc-options:    -Wcompat
                    -Wunrecognised-warning-flags
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

  build-depends:
    base                == 4.*,
    deepseq             >= 1.4.0 && < 1.5,
    gauge               >= 0.2.3 && < 0.3,
    mtl                 >= 2     && < 2.3,
    random              >= 1.0   && < 2.0,
    transformers        >= 0.4   && < 0.6,
    template-haskell    >= 2.10  && < 2.17,

    bytestring          >= 0.9   && < 0.11,
    text                >= 1.0   && < 1.3,
    vector              >= 0.12  && < 0.13,
    streamly            >= 0.7.0 && < 0.8,
    streaming           >= 0.1.4 && < 0.3,
    machines            >= 0.6.0 && < 0.8,
    pipes               >= 4     && < 4.4,
    conduit             >= 1.3   && < 1.4,
    drinkery            >= 0.3   && < 0.5,
    dlist               >= 0.7   && < 1.1,
    containers          >= 0.5   && < 0.7
    -- does not build with lts-11.0
    -- simple-conduit      >= 0.4.0 && < 0.7,
    -- list-transformer    >= 1.0.2 && < 1.1,
    -- list-t              >= 0.4.6 && < 1.1,
    -- logict              >= 0.5.0 && < 0.7,

executable makecharts
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  hs-source-dirs:   .
  main-is: Charts.hs
  ghc-options: -Wall
  if flag(dev)
    buildable: True
    build-depends:
        base              == 4.*
      , bench-show        >= 0.3.0   && < 0.4
      , bytestring        >= 0.9     && < 0.11
      , Chart             >= 1.6     && < 2
      , Chart-diagrams    >= 1.6     && < 2
      , csv               >= 0.1     && < 0.2
      , directory         >= 1.2     && < 1.4
      , split             >= 0.2     && < 0.3
      , text              >= 1.1.1   && < 1.3
      , transformers      >= 0.4     && < 0.6
      , typed-process     >= 0.1.0.0 && < 0.3
      , getopt-generics   >= 0.11    && < 0.14
  else
    buildable: False
